# e20-4yp-Neuromorphic-Smart-Sensor-for-Autonomous-Underwater-Vehicles

3d design of the vehicle/3d model of sylinger control/: fyp - boya.stl  fyp - boyac_re arearrenge_.stl  fyp 1.2.stl  fyp 1.3.stl  fyp 1.5.stl  fyp1.5.stl  fyp1.6.stl
Geo model simulations /fyp_backup/backup_02/fyp_ws/install/buoy_sub_geo_sim/share/buoy_sub_geo_sim/: package.xml
Geo model simulations /fyp_backup/plots/test 01 /: plot.py  plot12.ipynb  simulation_log.txt
Geo model simulations /fyp_backup/plots/test 02/: plot12 (1).ipynb  simulation_log.txt
Geo model simulations /fyp_backup/plots/test 03 - geomodel clean /: plot12 (2).ipynb  simulation_log.txt
Geo model simulations /fyp_backup/plots/test 04- geo model with clean and kalman filter/: plot12 (3).ipynb  simulation_log.txt
Geo model simulations /fyp_ws/buoy_sub_geo_sim/buoy_sub_geo_sim/: auto_runner.py  logger_node.py
Geo model simulations /fyp_ws/buoy_sub_geo_sim/launch/: auto_sim.launch.py
Geo model simulations /fyp_ws/log/: latest_build
Geomodel/: geomodel_clean.py  geomodel_kalman.py  script.py
Hardware/Code/5 sensors/sketch_feb14a/: sketch_feb14a.ino
Hardware/Code/data preprocessing/: .vsclog  baseline_comparison.pkl  dataset.csv  feature_scaler.pkl  pre future copy.ipynb  pre future new.ipynb  pre future.ipynb  pre.ipynb  pre_future_new_eval(2).ipynb  pre_future_new_eval.ipynb  pre_processing.ipynb  predict.py  sensor.csv  snn_obstacle_model.pth  y_snn.npy
Hardware/Code/jsn water/1/: 1.ino
code/obstacal avoidance code/: obs.py
docs/: README.md  index.html
docs/data/: index.json
(+68 files in other folders)
